updating more informations

--- a/block-BHaaac/index.html
+++ b/block-BHaaac/index.html
@@ -2,5 +2,6 @@
 <html lang="en">
     <body>
         <h1> Hello world! </h1>
+        <p> the earth is round. we have total  planets in the solar system</p>
     </body>
 </html>
