updating index file with CSS

--- a/block-BHaaaf/index.html
+++ b/block-BHaaaf/index.html
@@ -1,9 +1,15 @@
-<!-- 
-  ### Create a simple page with an external stylesheet.
-
-  TODO:
-    - Create a simple page `(index.html)` with one heading following with a long paragraph.
-    - Create an external stylesheet `(style.css)` and change the color and font size of the heading and paragraph.
-    - Also, change the background color of the body.
-    - Use different selectors to select different elements.
--->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title> Solar Sytem!</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1 class="variable" > solar system</h1>
+    <p id="const">  the Solar System is about 4.6 billion years old. </p>
+    <p > It formed by gravity in a large molecular cloud.</p>
+    <p> Most of this matter gathered in the center, and the rest flattened into an orbiting disk that became the Solar System.</p>
+    <p> It is thought that almost all stars form by this process.</p>
+  </body>
+</html>
