--- a/block-BHaaag/index.html
+++ b/block-BHaaag/index.html
@@ -1,18 +1,57 @@
-<!-- 
-  ### Create a page according to the design shown below.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1><b>Peter Mullins </b></h1>
+  <h3>peter.mullins@email.com / Rochester, New York </h3>
+  <br>
+  <h2>Exprience</h2>
+  <h3>Senior front end developer </h3>
+  <p>Design web applications accoring to client briefs and modify designs to meet changes client specifications </p>
+  <p>Devlop web products by coding wireframes into elements that userscan interact with</p>
+  <p>work in a team of web designer, back and developers and UK designers to meet projects goals and create Exprience web applications and computer</p>
+  <p>products</p>
+  <p>Use skills in debugging to check code, improve code and enhance the funcationality and user Exprience of web applications and computer</p>
+  <p>program</p>
+  <p>supervise juinor developers, providetraining and motivate team members.</p> 
+  <p> Created several successfull web campaigns that won awards in 2018</p>
 
-  TODO:
-    - Open this image in a window for the design layout - (https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/introduction/assignment1.png)
-    - Use external stylesheet to style the page.
-    - For different level of heading use different heading elements. We have Six level of heading elements:
-      - `<h1></h1>`
-      - `<h2></h2>`
-      - `<h3></h3>`
-      - `<h4></h4>`
-      - `<h5></h5>`
-      - `<h6></h6>`
+  <h3>Front end developer</h3>
+  <p>Collaborted with web designers, back end developers and UK designers to design, build , test and improve web products </p>
+  <p>Added to the company database of code by devloping reusable code that could minimize the time needed to complete projects in the future</p>
+  <p>Ensured scalability of front end elements by optimizing them for loading speed and performance</p>
+  <p>Assisted the training of new developers and web designers</p>
+  <p>Worked with teams of IT professional to meet team goals and business objectivesavery web Products</p>
 
-    - Wrap the text or word inside `<strong></strong> or <b></b>` tag to make it bold.
-    - Wrap the text or word inside `<em></em> or <i></i>` tag to make it italicize.
-    - Use `<address></address>` tag for addresses. 
--->
+  <h3>Front End Developer Intern</h3>
+  <p>Developed code to convert design wireframes into website elements under supervisions</p>
+  <p>Used frameworks for front end development such as React and Ember, design software such as Photoshop and Dreamware and programming</p>
+  <p>languages such as HTML and JavaScript</p>
+  <p>Assisted senior front End Developers in designing web applications and gained skills in alligning designs with client requirements.</p>
+  <p>Gained exprience in resolving conflicts withcolleagues professionally.</p>
+  <p>Learned to interact with clients, present designs and handle feedback on work</p>
+
+  <h2>Skills</h2>
+   
+  <p><i>HTML</i></p>
+
+  <p><i>CSS</i></p>
+
+  <p><i>React</i></p>
+
+  <p><i>javaScript</i></p>
+
+  <p><i>Photoshop</i></p>
+
+  <p><i>Illustrator</i></p>
+
+  <h2>Connect</h2>
+
+  <address><a href="twitter.com">twitter</a>   <a href="linkedin.com">linkedin</a> <a href="instagram.com">instagram</a>   <a href="facebook.com">facebook </a>  </address>   
+
+
+</body>
+</html>
